feat(js-refactor): Refactor JavaScript into Modular Components and Enhance ESLint Configuration
- Renamed 'script.js' to 'app.js' and 'functions.js' to 'utils.js'; introduced 'settings.js' for configuration.
- Created separate JS modules: 'Product.js', 'AmountWidget.js', 'Cart.js', 'CartProduct.js'.
- Updated ESLint rules for consistent coding style (indentation, linebreaks, quotes, semicolons).
- Cleaned up 'app.js', ensuring proper linking in 'index.html'.
- Implemented modular import/export patterns in JS files.

Impact: These changes streamline the codebase and improve maintainability, setting a solid foundation for future development and integration with advanced frameworks.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,14 +9,28 @@
         "sourceType": "module"
     },
     "rules": {
+        "indent": [
+            "error",
+            2
+        ],
         "linebreak-style": [
-            "off"
+            "error",
+            "unix"
+        ],
+        "quotes": [
+            "error",
+            "single",
+            {"allowTemplateLiterals": true}
+        ],
+        "semi": [
+            "error",
+            "always"
         ],
         "no-console": [
             "off"
         ]
     },
     "globals": {
-      "Handlebars": false
-    }
+        "Handlebars": false
+      }
 }
