--- a/src/db/app.json
+++ b/src/db/app.json
@@ -206,7 +206,7 @@
    "events": [
       {
         "id": 1,
-        "date": "2023-12-16",
+        "date": "2023-12-21",
         "hour": "12:30",
         "table": 1,
         "repeat": false,
@@ -255,5 +255,16 @@
         "starters": ["lemonWater"]
       }
     ],
-    "bookings": []
+    "bookings": [
+      {
+         "id": 1,
+         "date": "2023-12-22",
+         "hour": "12:30",
+         "table": 1,
+         "repeat": false,
+         "duration": 4,
+         "ppl": 3,
+         "starters": []
+      }
+    ]
 }
